# sfdx-scratch-org-builder

./: .gitignore  LICENSE  README.md  config.py  console_mode.py  demo_builder.py  demo_config.py  org_builder.py  org_config.py  org_config.yml  org_manager.py  org_manager_form.py  pyproject.toml  requirements.txt  requirements_linux.txt  requirements_win.txt  setup.cfg  sf-org_builder.py  sf-orgs_app.py  sfdx-project.json  sfdx_cli_utils.py
.github/workflows/: python-app.yml
config/: project-scratch-def.json
sf_org_manager/: __init__.py  command_line.py  org_builder.py  org_manager.py  sfdx_cli_utils.py
