[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sf-org-manager"
version = "0.0.3"
description = "Tool to list Salesforce Orgs & Log in"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nigel Hughes", email = "merv@merv.org.uk"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/MervmessInc/sfdx-scratch-org-builder"
Repository = "https://github.com/MervmessInc/sfdx-scratch-org-builder"

[project.scripts]
sf-orgs = "sf_org_manager.org_manager:main"
sf-org_builder = "sf_org_manager.org_builder:main"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["sf_org_manager*"]
exclude = ["tests*", "*.egg-info"]
