[metadata]
name = sf_org_manager
version = 0.0.1
license = MIT
description = "Tool list Salesforce Orgs & Log in",
url = "https://github.com/MervmessInc/sfdx-scratch-org-builder",
author = "Nigel Hughes",
author_email = "merv@merv.org.uk",

[options]
zip_safe = False
packages = sf_org_manager

[options.entry_points]
console_scripts =
    sf-orgs = sf_org_manager.command_line:main
    sf-org_builder = sf_org_manager.org_builder:main
